--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>spigot-1.16.5</module>
         <module>spigot-1.20.6</module>
         <module>spigot-1.21</module>
+        <module>spigot-1.20.2</module>
     </modules>
 
     <properties>
