--- a/core/src/main/resources/message.yml
+++ b/core/src/main/resources/message.yml
@@ -10,6 +10,7 @@ balance-command: "<green>%player% balance: <white>%essence%"
 player-not-exist: "<red>That player hasn't played before."
 player-not-online: "<red>That player must be online!"
 essence-given-success: "<green>You have been given <white>%amount% <green>by <white>%player%"
+essence-taken-success: "<red>You have been taken <white>%amount% <red>by <white>%player%"
 already-have-enchant: "<red>You already have that enchant!"
 already-max-level: "<red>You have already maxed this enchant!"
 higher-than-max: "<red>The max level of this enchantment is: <white>%maxLevel%"
