--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -45,6 +45,7 @@ tools:
       - "<yellow> - Owner: <white>%owner%"
       - "<yellow> - Recollected essence: <white>%essence%"
       - "<yellow> - Level: <white>%level%"
+      - "<yellow> - Progress: %progress%"
       - "<yellow> - Prestige: <white>%prestige%"
       - ""
       - "<white><b>Mode"
@@ -63,6 +64,7 @@ tools:
       - "<yellow> - Owner: <white>%owner%"
       - "<yellow> - Recollected essence: <white>%essence%"
       - "<yellow> - Level: <white>%level%"
+      - "<yellow> - Progress: %progress%"
       - "<yellow> - Prestige: <white>%prestige%"
       - ""
       - "<white><b>Mode"
@@ -80,6 +82,7 @@ tools:
       - "<yellow> - Owner: <white>%owner%"
       - "<yellow> - Recollected essence: <white>%essence%"
       - "<yellow> - Level: <white>%level%"
+      - "<yellow> - Progress: %progress%"
       - "<yellow> - Prestige: <white>%prestige%"
       - ""
       - "<white><b>Mode"
@@ -91,6 +94,8 @@ tools:
   pickaxe:
     material: "DIAMOND_PICKAXE"
     name: "<blue>Harvester Pickaxe <white>%sell-mode%"
+    regen-block: true
+    time-to-regen: 5 #Seconds
     lore:
       - "<gray>Use this hoe to mine ores and become the richest player"
       - ""
@@ -98,6 +103,7 @@ tools:
       - "<yellow> - Owner: <white>%owner%"
       - "<yellow> - Recollected essence: <white>%essence%"
       - "<yellow> - Level: <white>%level%"
+      - "<yellow> - Progress: %progress%"
       - "<yellow> - Prestige: <white>%prestige%"
       - ""
       - "<white><b>Mode"
@@ -111,6 +117,13 @@ enchantList: " <white>➛ <green><b>%enchant% <gray>(<yellow>%level%<gray>/<yell
 #This will show like this:
 #➛ %enchant%
 #➛ %enchant% ...
+
+#Choose the way you want to show the progress to the next level.
+# - 0 - If you just want a progress bar
+# - 1 - If you just want a percentage
+# - 2 - If you want both just like this (bar) (percentage)
+progress-type: 0
+
 Prestige:
   level-to-prestige: 30 #Level needed to prestige
   boost-essence: true
