--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -24,6 +24,8 @@ permissions:
     default: true
   harvestertools.essence.give:
     default: op
+  harvestertools.essence.take:
+    default: op
   harvestertools.essence.pay:
     default: true
   harvestertools.essence.withdraw:
