--- a/core/src/main/resources/message.yml
+++ b/core/src/main/resources/message.yml
@@ -29,3 +29,4 @@ successful-buy: "<green>You have successfully purchased %item%!"
 wrong-tool: "<red>You cannot farm with that tool here!"
 level-required-crop: "<red>You don't have the required level to use this."
 level-up-tool: "<green>Your tool have been upgraded to level <white>%level%<green>."
+max-prestige: "<green>You already have max prestige!"
