--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spigot-1.20.6</module>
         <module>spigot-1.21</module>
         <module>spigot-1.20.2</module>
+        <module>spigot-1.21.1</module>
     </modules>
 
     <properties>
